force-app/main/default/objects/Expense_Entry__c/Expense_Entry__c.object-meta.xml
<CustomObject>
    <label>Expense Entry</label>
    <nameField>
        <displayFormat>EE-{000000000}</displayFormat>
        <label>Expense Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>