force-app/main/default/objects/Expense_Entry__c/fields/Contract_Resource__c.field-meta.xml
<CustomField>
    <fullName>Contract_Resource__c</fullName>
    <label>Contract Resource</label>
    <referenceTo>Contract_Resource__c</referenceTo>
    <relationshipLabel>Expense Entries</relationshipLabel>
    <relationshipName>Expense_Entries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>