force-app/main/default/objects/Expense_Entry__c/fields/InternalApproval__c.field-meta.xml
<CustomField>
    <fullName>InternalApproval__c</fullName>
    <label>Internal Approval</label>
    <type>DateTime</type>
</CustomField>