force-app/main/default/objects/Expense_Entry__c/fields/Invoiced_Amount__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_Amount__c</fullName>
    <label>Invoiced Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>