force-app/main/default/objects/Expense_Entry__c/fields/Is_Billable__c.field-meta.xml
<CustomField>
    <fullName>Is_Billable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Billable</label>
    <type>Checkbox</type>
</CustomField>