force-app/main/default/objects/Expense_Entry__c/fields/Submittal_Date__c.field-meta.xml
<CustomField>
    <fullName>Submittal_Date__c</fullName>
    <label>Submittal Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>