force-app/main/default/objects/Expense_Entry__c/fields/TimesheetId__c.field-meta.xml
<CustomField>
    <fullName>TimesheetId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Timesheet Id</label>
    <referenceTo>Timesheet__c</referenceTo>
    <relationshipLabel>Expense Entries</relationshipLabel>
    <relationshipName>Expense_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>